--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,1 +1,1 @@
-body{background-color:#fe33ac}
+.photo{min-height:500px;max-height:100%;background-size:cover;border:1px solid white;font-size:1.2em}.info,.header{font-size:1.2em;color:white}
