--- a/app/static/css/style.less
+++ b/app/static/css/style.less
@@ -1,6 +1,18 @@
 @base: #f938ab;
 
 body{
-  background-color: saturate(@base, 5%);
+
 }
 
+.photo {
+  min-height: 500px;
+  max-height: 100%;
+  background-size: cover;
+  border: 1px solid white;
+  font-size: 1.2em;
+}
+
+.info, .header{
+  font-size: 1.2em;
+  color: white;
+}
