--- a/app/views/shared/nav.jade
+++ b/app/views/shared/nav.jade
@@ -6,11 +6,13 @@
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href='/') Template
+      a.navbar-brand(href='/') Facebook Clone - github.com/kadowki
 
     .collapse.navbar-collapse#bs-navbar-collapse
       ul.nav.navbar-nav.navbar-right
         if user
+          li: a(href='/profile/edit') Edit Profile
+          li: a(href='/profile') View Profile
           li
             form.navbar-form(method='post', action='/logout')
               .form-group
