--- a/app/views/shared/nav.jade
+++ b/app/views/shared/nav.jade
@@ -13,6 +13,7 @@
         if user
           li: a(href='/profile/edit') Edit Profile
           li: a(href='/profile') View Profile
+          li: a(href='/users') View Public Users
           li
             form.navbar-form(method='post', action='/logout')
               .form-group
