--- a/app/views/users/edit.jade
+++ b/app/views/users/edit.jade
@@ -16,7 +16,7 @@ block content
               span Private
           .form-group
             label(for='email') Email 
-            input.form-control#email(type='email' name='email' value=user.email, autofocus=true)
+            input.form-control#email(type='email' name='email' value=user.email)
           .form-group
             label(for='photo') Photo 
             input.form-control#photo(type='text' name='photo' value=user.photo)
