--- a/app/views/shared/nav.jade
+++ b/app/views/shared/nav.jade
@@ -14,6 +14,7 @@
           li: a(href='/profile/edit') Edit Profile
           li: a(href='/profile') View Profile
           li: a(href='/users') View Public Users
+          li: a(href='/messages') Messages 
           li
             form.navbar-form(method='post', action='/logout')
               .form-group
