--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,1 +1,1 @@
-.photo{min-height:500px;max-height:100%;background-size:cover;border:1px solid white;font-size:1.2em}.info,.header{font-size:1.2em;color:white}
+.photo{min-height:500px;max-height:100%;background-size:cover;border:1px solid white;font-size:1.2em}.info,.header{font-size:1.2em;color:white}#message{font-size:1.3em;border-radius:10px}#message td{padding:20px}
