--- a/app/static/css/style.less
+++ b/app/static/css/style.less
@@ -16,3 +16,12 @@ body{
   font-size: 1.2em;
   color: white;
 }
+
+#message {
+  font-size: 1.3em;
+  border-radius: 10px;
+}
+
+#message td {
+  padding: 20px;
+}
